新增1.10.1的适配

--- a/www/templates/airflow/graph.html
+++ b/www/templates/airflow/graph.html
@@ -69,7 +69,8 @@
     <div class="legend_item state" style="border-color:pink;">跳过</div>
     <div class="legend_item state" style="border-color:red;">失败</div>
     <div class="legend_item state" style="border-color:lime;">运行中</div>
-    <div class="legend_item state" style="border-color:green;">成功</div>    </div>
+    <div class="legend_item state" style="border-color:green;">成功</div>    
+	</div>
     <div style="clear:both;"></div>
 </div>
 <div id="error" style="display: none; margin-top: 10px;" class="alert alert-danger" role="alert">
