--- a/www/templates/airflow/dag.html
+++ b/www/templates/airflow/dag.html
@@ -97,7 +97,14 @@
       <li>
         <a href="{{ url_for("airflow.refresh", dag_id=dag.dag_id) }}" title="Refresh">
           <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-        刷新
+          刷新
+        </a>
+      </li>
+      <li>
+        <a href="{{ url_for("airflow.delete", dag_id=dag.dag_id, root=root) }}"
+        onclick="return confirmDeleteDag('{{ dag.safe_dag_id }}')">
+        <span class="glyphicon glyphicon-remove-circle" style="color:red" aria-hidden="true"></span>
+        删除
         </a>
       </li>
     </ul>
@@ -300,6 +307,12 @@ function updateQueryStringParameter(uri, key, value) {
       $('#dag_id').html(dag_id);
       $('#dagModal').modal({});
       $("#dagModal").css("margin-top","0px");
+    }
+
+    function confirmDeleteDag(dag_id){
+        return confirm("您确定要删除 '"+dag_id+"' 吗?\n\
+          这将会删除所有源数据, DAG 的执行情况等数据。\n\
+          这将不能撤销。");
     }
 
     $("#btn_rendered").click(function(){
