--- a/www/templates/airflow/dags.html
+++ b/www/templates/airflow/dags.html
@@ -190,6 +190,12 @@
                   <span class="glyphicon glyphicon-refresh" aria-hidden="true" data-original-title="刷新"></span>
                 </a>
 
+                <!-- Delete -->
+                <a href="{{ url_for('airflow.delete', dag_id=dag.dag_id) }}"
+                  onclick="return confirmDeleteDag('{{ dag.safe_dag_id }}')">
+                   <span class="glyphicon glyphicon-remove-circle" style="color:red" aria-hidden="true" data-original-title="删除 Dag"></span>
+                </a>
+
                 </td>
             </tr>
         {% endfor %}
@@ -242,7 +248,13 @@
       });
 
       function confirmTriggerDag(dag_id){
-          return confirm("Are you sure you want to run '"+dag_id+"' now?");
+          return confirm("您确定要删除 '"+dag_id+"' 吗?");
+      }
+
+      function confirmDeleteDag(dag_id){
+          return confirm("您确定要删除 '"+dag_id+"' 吗?\n\
+          这将会删除所有源数据, DAG 的执行情况等数据。\n\
+          这将不能撤销。");
       }
       all_dags = $("[id^=toggle]");
       $.each(all_dags, function(i,v) {
@@ -390,7 +402,7 @@
             states = json[dag_id];
             g = d3.select('svg#task-run-' + dag_id)
               .attr('height', diameter + (stroke_width_hover * 2))
-              .attr('width', '240px')
+              .attr('width', '270px')
               .selectAll("g")
               .data(states)
               .enter()
