--- a/www/templates/admin/master.html
+++ b/www/templates/admin/master.html
@@ -27,50 +27,71 @@
 {{ super() }}
 <script src="{{ url_for('static', filename='jqClock.min.js') }}" type="text/javascript"></script>
 <script>
-
-    var url = window.location.href;
-    var theRequest = new Object();
-    if (url.indexOf("?") != -1) {
-      var str = url.substr(url.indexOf("?") + 1);
-      strs = str.split("&");
-      for(var i = 0; i < strs.length; i ++) {
-        theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1]);
-      }
-    }
-
-    if(theRequest["hidden"] == "false"){
-      $("body").css("padding-top","70px");
-      $("nav").show();
-    }else{
-      $("body").css("padding-top","0");
-      $("nav").hide();
-    }
-
     x = new Date()
-    var UTCseconds = (x.getTime() + x.getTimezoneOffset()*60*1000);
+    //var UTCseconds = (x.getTime() + x.getTimezoneOffset()*60*1000);
+    var UTCseconds = (x.getTime());
     $("#clock").clock({
         "dateFormat":"Y-m-d ",
-        "timeFormat":"H:i:s %UTC%",
+        {#"timeFormat":"H:i:s %UTC%",#}
+        "timeFormat":"H:i:s",
         "timestamp":UTCseconds
     }).click(function(){
         alert('{{ hostname }}');
     });
     $('span').tooltip();
+    var CSRF = {{ csrf_token() | tojson }};
 
     $.ajaxSetup({
       beforeSend: function(xhr, settings) {
         if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-          xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token() }}");
+          xhr.setRequestHeader("X-CSRFToken", CSRF);
         }
       }
     });
+
+var el = document.createElement("span");
+
+function escapeHtml(text) {
+  el.textContent = text;
+  return el.innerHTML;
+}
+
+function postAsForm(url, parameters) {
+  var form = $("<form></form>");
+
+  form.attr("method", "POST");
+  form.attr("action", url);
+
+  $.each(parameters || {}, function(key, value) {
+    var field = $('<input></input>');
+
+    field.attr("type", "hidden");
+    field.attr("name", key);
+    field.attr("value", value);
+
+    form.append(field);
+  });
+
+  var field = $('<input></input>');
+
+  field.attr("type", "hidden");
+  field.attr("name", "csrf_token");
+  field.attr("value", CSRF);
+
+  form.append(field);
+
+  // The form needs to be a part of the document in order for us to be able
+  // to submit it.
+  $(document.body).append(form);
+  form.submit();
+}
 </script>
 {% endblock %}
 
 {% block page_body %}
 <div class="container">
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: {{ navbar_color }};display: none">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: {{ navbar_color }};">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -108,7 +129,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a id="clock"></a></li>
             {% if current_user.is_authenticated %}
-              <li><a href="{{ url_for('airflow.logout') }}"><span data-toggle="tooltip" data-placement="left" title="Logout" class="glyphicon glyphicon-log-out"></span></a></li>
+              <li class="never_active"><a href="{{ url_for('airflow.logout') }}"><span data-toggle="tooltip" data-placement="left" title="Logout" class="glyphicon glyphicon-log-out"></span></a></li>
             {% endif %}
         </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -129,3 +150,4 @@
 
 </div>
 {% endblock %}
+
