--- a/www/templates/airflow/confirm.html
+++ b/www/templates/airflow/confirm.html
@@ -19,17 +19,22 @@
 
 {% block body %}
     {{ super() }}
-    <h2>等等</h2>
+    <h2>请稍等</h2>
     <div class="panel">
     <p>{{ message }}</p>
     {% if details %}
         <pre><code>{{ details }}</code></pre>
     {% endif %}
     </div>
-    <button class="btn btn-primary" onclick="window.location += '&confirmed=true'">
-        确认
-    </button>
-    <button class="btn" onclick="window.history.back()">离开</button>
+    <form method="POST">
+      <input name="csrf_token" type="hidden" value="{{ csrf_token() }}">
+      <input name="confirmed" type="hidden" value="true">
+      {% for name,val in request.form.items() if name != "csrf_token" %}
+        <input type="hidden" name="{{ name }}" value="{{ val }}">
+      {% endfor %}
+      <input class="btn btn-primary" type="submit" value="OK!">
+      <button class="btn" onclick="window.history.go(-2); return false">bail.</button>
+    </form>
     <br>
     <br>
 {% endblock %}
