--- a/www/templates/airflow/dag_details.html
+++ b/www/templates/airflow/dag_details.html
@@ -37,12 +37,12 @@
     <br>
     <table class="table table-striped table-bordered">
       <tr>
-        <th>调度时间间隔</td>
-        <td>{{ dag.schedule_interval }}</td>
+          <th>调度时间间隔</td>
+<td>{{ dag.schedule_interval }}</td>
       </tr>
       <tr>
         <th>最大活跃运行数</td>
-        <td>{{ dag.active_runs | length }} / {{ dag.max_active_runs }}</td>
+        <td>{{ active_runs | length }} / {{ dag.max_active_runs }}</td>
       </tr>
       <tr>
         <th>并发</td>
@@ -57,7 +57,7 @@
         <td>{{ dag.tasks|length }}</td>
       </tr>
       <tr>
-        <th>任务ids</td>
+        <th>任务 id</td>
         <td>{{ dag.task_ids }}</td>
       </tr>
       <tr>
