--- a/www/templates/airflow/para/para.html
+++ b/www/templates/airflow/para/para.html
@@ -1,4 +1,4 @@
-﻿{# 
+{# 
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
@@ -54,11 +54,11 @@
       <div class="little-box">
         <h3>控制</h3>
         <p>
-            <strong>Brush</strong>: 沿轴线垂直拖动<br />
-            <strong>Remove Brush</strong>: 点击轴背景<br />
-            <strong>Reorder Axes</strong>: 拖动水平标签<br />
-            <strong>Invert Axis</strong>: 点击轴标签<br />
-            <strong>Remove Axis</strong>: 将轴标签拖动到左侧边缘<br />
+          <strong>Brush</strong>: 沿轴线垂直拖动<br/>
+          <strong>Remove Brush</strong>: 点击轴背景<br/>
+          <strong>Reorder Axes</strong>: 阻力水平的标签<br/>
+          <strong>Invert Axis</strong>: 点击轴标签<br/>
+          <strong>Remove Axis</strong>: 将坐标轴拖动到左侧边缘<br/>
         </p>
       </div>
       <div class="little-box">
@@ -67,12 +67,12 @@
             <a href="https://github.com/gameclosure/webgl-2d">Webgl-2d</a>
           </p>
           <p>
-              由实例改编<br />
-              <a href="http://bl.ocks.org/1341021">Mike Bostock</a> 和 <a href="http://bl.ocks.org/1341281">Jason Davies</a><br />
+            由实例改编<br/>
+          <a href="http://bl.ocks.org/1341021">Mike Bostock</a> 和 <a href="http://bl.ocks.org/1341281">Jason Davies</a><br/>
           </p>
           <p>
-              版权 &copy; 2012, Kai Chang<br />
-              所有版权发布在 <a href="http://opensource.org/licenses/bsd-3-clause">BSD License</a>.
+            版权 &copy; 2012, Kai Chang<br/>
+            所有版权发布在 <a href="http://opensource.org/licenses/bsd-3-clause">BSD License</a>.
           </p>
         </p>
       </div>
@@ -86,7 +86,7 @@
       </p>
     </div>
     <div class="third">
-      <h3>25个样本 <input type="text" id="search" placeholder="Search..."></input></h3>
+      <h3>25个样本<input type="text" id="search" placeholder="Search..."></input></h3>
       <p id="food-list">
       </p>
     </div>
