--- a/www/templates/airflow/variable_list.html
+++ b/www/templates/airflow/variable_list.html
@@ -25,7 +25,7 @@
     {% if csrf_token %}
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     {% endif %}
-    <input class="form-control" type="file" name="file">
+    <input class="form-control" type="file" name="文件">
     <input class="btn btn-default" type="submit" value="导入变量"/>
   </form>
   <hr/>
