--- a/www/templates/airflow/conn_list.html
+++ b/www/templates/airflow/conn_list.html
@@ -19,16 +19,13 @@
 
 {% block model_menu_bar %}
   {% if not admin_view.is_secure() %}
-<div class="alert alert-danger"><b>警告:</b> 在您安装Python“cryptography”库之前，连接密码都存储在明文中，你可以在这里找到安装说明: <a href=https://cryptography.io/en/latest/installation />https://cryptography.io/en/latest/installation/</a>. Once installed, instructions for creating an encryption key will be displayed the next time you import Airflow. </div>
+  <div class="alert alert-danger"><b>警告:</b> 连接密码存储在明文中，直到安装Python“cryptography”库为止。你可以在这里找到安装说明: <a href=https://cryptography.io/en/latest/installation/>https://cryptography.io/en/latest/installation/</a>. Once installed, instructions for creating an encryption key will be displayed the next time you import Airflow. </div>
   {% endif %}
   {% if admin_view.alert_fernet_key() %}
-<div class="alert alert-danger">
-    <b>警告:</b>
-    目前，Airflow 在<b>纯文本</b>中存储密码。
-    若要打开连接的密码加密，需要在你airflow.cfg文件的“core”部分添加"fernet_key"选项，
-    若要生成密钥，可以调用函数
-    <code>airflow.configuration.generate_fernet_key()</code>
-</div>
+    <div class="alert alert-danger"><b>警告:</b>
+      目前，Airflow 在<b>纯文本</b>中存储密码。要打开连接的密码加密，需要添加"fernet_key"选项为你的airflow.cfg的“core”部分，若要生成密钥，可以调用函数
+      <code>airflow.configuration.generate_fernet_key()</code>
+    </div>
   {% endif %}
   {{ super() }}
 {% endblock %}
