--- a/www/templates/airflow/dags.html
+++ b/www/templates/airflow/dags.html
@@ -28,7 +28,7 @@
 {% block body %}
   <h2>DAGs</h2>
 
-  <div id="main_content">
+  <div id="main_content" style="display:none;">
     <div class="row">
       <div class="col-sm-2">
       </div>
@@ -45,55 +45,70 @@
         <thead>
             <tr>
                 <th></th>
-                <th width="12"><span id="pause_header" class="glyphicon glyphicon-info-sign" title="Use this toggle to pause a DAG. The scheduler won't schedule new tasks instances for a paused DAG. Tasks already running at pause time won't be affected."></span></th>
+                <th width="12"><span id="pause_header" class="glyphicon glyphicon-info-sign" title="切换暂停DAG。调度器不会为暂停的DAG安排新任务实例。在暂停时候运行的任务不会受到影响。"></span></th>
                 <th>DAG</th>
                 <th>调度时间间隔</th>
                 <th>所有者</th>
                 <th style="padding-left: 5px;">最近执行任务
-                  <span id="statuses_info" class="glyphicon glyphicon-info-sign" aria-hidden="true" title="Status of tasks from all active DAG runs or, if not currently active, from most recent run."></span>
+                  <span id="statuses_info" class="glyphicon glyphicon-info-sign" aria-hidden="true" title="所有激活的DAG的运行任务的状态，或者如果不是最近激活的则是离目前最近的时间点的。"></span>
                   <img id="loading" width="15" src="{{ url_for("static", filename="loading.gif") }}">
                 </th>
                 <th style="padding-left: 5px;">最后执行任务 <span id="statuses_info" class="glyphicon glyphicon-info-sign" aria-hidden="true" title="Execution Date/Time of Highest Dag Run."></span>
                 </th>
-                <th style="padding-left: 5px;">DAG运行情况
-                  <span id="statuses_info" class="glyphicon glyphicon-info-sign" aria-hidden="true" title="Status of all previous DAG runs."></span>
+                <th style="padding-left: 5px;">运行情况
+                  <span id="statuses_info" class="glyphicon glyphicon-info-sign" aria-hidden="true" title="所有之前运行的DAG状态。"></span>
                   <img id="loading" width="15" src="{{ url_for("static", filename="loading.gif") }}">
                 </th>
                 <th class="text-center">执行链接</th>
             </tr>
         </thead>
         <tbody>
-        {% for dag in dags %}
+        {% for dag_id in dag_ids_in_page %}
+            {% set dag = webserver_dags[dag_id] if dag_id in webserver_dags else None %}
             <tr>
                 <!-- Column 1: Edit dag -->
                 <td class="text-center" style="width:10px;">
-                  <a href="{{ url_for('dagmodel.edit_view') }}?id={{ dag.dag_id }}" title="Info">
+                    {% if dag_id in orm_dags %}
+                  <a href="{{ url_for('dagmodel.edit_view') }}?id={{ dag_id }}" title="Info">
                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     </a>
+                    {% endif %}
                 </td>
 
                 <!-- Column 2: Turn dag on/off -->
                 <td>
-                  <input id="toggle-{{ dag.dag_id }}" dag_id="{{ dag.dag_id }}" type="checkbox" {{ "checked" if not dag.is_paused else "" }} data-toggle="toggle" data-size="mini" method="post">
+                  {% if dag_id in orm_dags %}
+                    <input id="toggle-{{ dag_id }}" dag_id="{{ dag_id }}" type="checkbox" {{ "checked" if not orm_dags[dag_id].is_paused else "" }} data-toggle="toggle" data-size="mini" method="post">
+                  {% endif %}
                 </td>
 
                 <!-- Column 3: Name -->
                 <td>
-                  <a href="{{ url_for('airflow.'+ dag.get_default_view(), dag_id=dag.dag_id) }}" title="{{ dag.description }}">
-                      {{ dag.dag_id }}
-                  </a>
+                    {% if dag_id in webserver_dags %}
+                    <a href="{{ url_for('airflow.'+dag.default_view, dag_id=dag.dag_id) }}" title="{{ dag.description }}">
+                        {{ dag_id }}
+                    </a>
+                    {% else %}
+                        {{ dag_id }}
+                        <span class="glyphicon glyphicon-info-sign" class="info" aria-hidden="true" title="此DAG在Web服务器的DagBag对象中不可用。它显示在这个列表中是因为调度器在元数据数据库中将其标记为活动。"></span>
+                    {% endif %}
+                    {% if dag_id not in orm_dags %}
+                        <span class="glyphicon glyphicon-info-sign" class="info" aria-hidden="true" title="这个DAG可能只存在于本地。主节点的调度器可能不能识别它的存在。"></span>
+                    {% endif %}
                 </td>
 
                 <!-- Column 4: Dag Schedule -->
                 <td>
+                    {% if dag_id in webserver_dags %}
                   <a class="label label-default schedule {{ dag.dag_id }}" href="{{ url_for('dagrun.index_view') }}?flt2_dag_id_equals={{ dag.dag_id }}">
-                        {{ dag.schedule_interval | string }}
+                        {{ dag.schedule_interval }}
                     </a>
+                    {% endif %}
                 </td>
 
                 <!-- Column 5: Dag Owners -->
                 <td>
-                  {{ dag.owners }}
+                  {{ dag.owner if dag else orm_dags[dag_id].owners }}
                 </td>
 
                 <!-- Column 6: Recent Tasks -->
@@ -103,12 +118,14 @@
 
                 <!-- Column 7: Last Run -->
                 <td class="text-nowrap latest_dag_run {{ dag.dag_id }}">
-                  {% set last_run = dag.get_last_dagrun(include_externally_triggered=True) %}
-                  {% if last_run and last_run.execution_date %}
-                    <a href="{{ url_for('airflow.graph', dag_id=dag.dag_id, execution_date=last_run.execution_date) }}">
-                      {{ last_run.execution_date.strftime("%Y-%m-%d %H:%M") }}
-                    </a>
-                    <span aria-hidden="true" id="statuses_info" title="开始时间: {{ last_run.start_date.strftime("%Y-%m-%d %H:%M") }}" class="glyphicon glyphicon-info-sign"></span>
+                  {% if dag %}
+                    {% set last_run = dag.get_last_dagrun(include_externally_triggered=True) %}
+                    {% if last_run and last_run.execution_date %}
+                      <a href="{{ url_for('airflow.graph', dag_id=dag.dag_id, execution_date=last_run.execution_date) }}">
+                        {{ last_run.execution_date.strftime("%Y-%m-%d %H:%M") }}
+                      </a>
+                      <span aria-hidden="true" id="statuses_info" title="开始时间: {{ last_run.start_date.strftime("%Y-%m-%d %H:%M") }}" class="glyphicon glyphicon-info-sign"></span>
+                    {% endif %}
                   {% endif %}
                 </td>
 
@@ -122,14 +139,14 @@
                 {% if dag %}
 
                 <!-- Trigger Dag -->
-                <a href="{{ url_for('airflow.trigger', dag_id=dag.dag_id) }}&origin={{ request.base_url }}"
-                   onclick="return confirmTriggerDag(this, '{{ dag.safe_dag_id }}')">
-                    <span class="glyphicon glyphicon-play-circle" aria-hidden="true" data-original-title="启动Dag"></span>
+                <a href="{{ url_for('airflow.trigger', dag_id=dag.dag_id) }}"
+                   onclick="return confirmTriggerDag('{{ dag.safe_dag_id }}')">
+                    <span class="glyphicon glyphicon-play-circle" aria-hidden="true" data-original-title="切换Dag"></span>
                 </a>
 
                 <!-- Tree -->
                 <a href="{{ url_for('airflow.tree', dag_id=dag.dag_id, num_runs=num_runs) }}">
-                    <span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true" data-original-title="树状视图"></span>
+                    <span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true" data-original-title="树形视图"></span>
                 </a>
 
                 <!-- Graph -->
@@ -169,16 +186,10 @@
                 {% endif %}
 
                 <!-- Refresh -->
-                <a href="{{ url_for("airflow.refresh", dag_id=dag.dag_id) }}" onclick="postAsForm(this.href); return false">
+                <a href="{{ url_for("airflow.refresh", dag_id=dag_id) }}">
                   <span class="glyphicon glyphicon-refresh" aria-hidden="true" data-original-title="刷新"></span>
                 </a>
 
-                <!-- Delete -->
-                <!-- Use dag_id instead of dag.dag_id, because the DAG might not exist in the webserver's DagBag -->
-                <a href="{{ url_for('airflow.delete', dag_id=dag.dag_id) }}"
-                  onclick="return confirmDeleteDag(this, '{{ dag.dag_id }}')">
-                   <span class="glyphicon glyphicon-remove-circle" style="color:red" aria-hidden="true" data-original-title="Delete Dag"></span>
-                </a>
                 </td>
             </tr>
         {% endfor %}
@@ -198,9 +209,9 @@
 
     </div>
     {% if not hide_paused %}
-    <a href="{{ url_for('admin.index') }}?showPaused=False">隐藏暂停的DAGs</a>
+    <a href="{{ url_for('admin.index') }}?showPaused=False">隐藏停止的DAGs</a>
     {% else %}
-    <a href="{{ url_for('admin.index') }}?showPaused=True">显示暂停的DAGs</a>
+    <a href="{{ url_for('admin.index') }}?showPaused=True">显示停止的DAGs</a>
     {% endif %}
   </div>
 {% endblock %}
@@ -230,22 +241,8 @@
         window.location = DAGS_INDEX + "?page_size=" + p_size;
       });
 
-      function confirmTriggerDag(link, dag_id){
-        if (confirm("Are you sure you want to run '"+dag_id+"' now?")) {
-          postAsForm(link.href, {});
-        }
-        // Never follow the link
-        return false;
-      }
-
-      function confirmDeleteDag(link, dag_id){
-        if (confirm("Are you sure you want to delete '"+dag_id+"' now?\n\
-          This option will delete ALL metadata, DAG runs, etc.\n\
-          EXCEPT Log.\n\
-          This cannot be undone.")) {
-          postAsForm(link.href, {});
-        }
-        return false;
+      function confirmTriggerDag(dag_id){
+          return confirm("Are you sure you want to run '"+dag_id+"' now?");
       }
       all_dags = $("[id^=toggle]");
       $.each(all_dags, function(i,v) {
@@ -256,7 +253,7 @@
           } else {
             is_paused = 'false'
           }
-          url = {{ url_for('airflow.paused') | tojson }} + '?is_paused=' + is_paused + '&dag_id=' + encodeURIComponent(dag_id);
+          url = 'airflow/paused?is_paused=' + is_paused + '&dag_id=' + dag_id;
           $.post(url);
         });
       });
@@ -393,7 +390,7 @@
             states = json[dag_id];
             g = d3.select('svg#task-run-' + dag_id)
               .attr('height', diameter + (stroke_width_hover * 2))
-              .attr('width', '300px')
+              .attr('width', '240px')
               .selectAll("g")
               .data(states)
               .enter()
