--- a/www/templates/airflow/tree.html
+++ b/www/templates/airflow/tree.html
@@ -20,66 +20,67 @@
 
 {% block head_css %}
 {{ super() }}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='tree.css') }}">
+<link rel="stylesheet" type="text/css"
+    href="{{ url_for('static', filename='tree.css') }}">
 <link href="{{ admin_static.url(filename='vendor/bootstrap-daterangepicker/daterangepicker-bs2.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
 {{ super() }}
 <div style="float: left" class="form-inline">
-  <form method="get" style="float:left;">
-    基准日期: {{ form.base_date(class_="form-control") }}
-    运行数量: {{ form.num_runs(class_="form-control") }}
-    <input type="hidden" name="root" value="{{ root if root else '' }}">
-    <input type="hidden" value="{{ dag.dag_id }}" name="dag_id">
-    <input type="submit" value="Go" class="btn btn-default">
-    <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
-  </form>
+    <form method="get" style="float:left;">
+        基准日期: {{ form.base_date(class_="form-control") }}
+        运行数量: {{ form.num_runs(class_="form-control") }}
+        <input type="hidden" name="root" value="{{ root if root else '' }}">
+        <input type="hidden" value="{{ dag.dag_id }}" name="dag_id">
+        <input type="submit" value="Go" class="btn btn-default"
+        action="" method="get">
+        <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
+    </form>
 </div>
 <div style="clear: both;"></div>
 <hr/>
 <div>
-  <div class="legend_item" style="border: none;">无状态</div>
-  <div class="square" style="background: white;"></div>
-  <div class="legend_item" style="border: none;">排队中</div>
-  <div class="square" style="background: grey;"></div>
-  <div class="legend_item" style="border: none;">等待重试</div>
-  <div class="square" style="background: gold;"></div>
-  <div class="legend_item" style="border: none;">等待重新调度</div>
-  <div class="square" style="background: turquoise;"></div>
-  <div class="legend_item" style="border: none;">跳过</div>
-  <div class="square" style="background: pink;"></div>
-  <div class="legend_item" style="border: none;">失败</div>
-  <div class="square" style="background: red;"></div>
-  <div class="legend_item" style="border: none;">运行中</div>
-  <div class="square" style="background: lime;"></div>
-  <div class="legend_item" style="border: none;">成功</div>
-  <div class="square" style="background: green;"></div>
-  {% for op in operators %}
-  <div class="legend_circle" style="background:{{ op.ui_color }};">
-  </div>
-  <div class="legend_item" style="float:left;border-color:white;">{{ op.__name__ }}</div>
-  {% endfor %}
-  <div style="clear:both;"></div>
+    <div class="legend_item" style="border: none;">无状态</div>
+    <div class="square" style="background: white;"></div>
+    <div class="legend_item" style="border: none;">队列中</div>
+    <div class="square" style="background: grey;"></div>
+    <div class="legend_item" style="border: none;">重试</div>
+    <div class="square" style="background: gold;"></div>
+    <div class="legend_item" style="border: none;">跳过</div>
+    <div class="square" style="background: pink;"></div>
+    <div class="legend_item" style="border: none;">失败</div>
+    <div class="square" style="background: red;"></div>
+    <div class="legend_item" style="border: none;">运行中</div>
+    <div class="square" style="background: lime;"></div>
+    <div class="legend_item" style="border: none;">成功</div>
+    <div class="square" style="background: green;"></div>
+    {% for op in operators %}
+        <div class="legend_circle" style="background:{{ op.ui_color }};">
+        </div>
+        <div class="legend_item" style="float:left;border-color:white;">{{ op.__name__ }}</div>
+    {% endfor %}
+    <div style="clear:both;"></div>
 </div>
 <hr/>
 <div id="svg_container">
-  <img id='loading' width="50" src="{{ url_for('static', filename='loading.gif') }}">
-  <svg class='tree' width="100%">
-    <filter id="blur-effect-1">
-      <feGaussianBlur stdDeviation="3"></feGaussianBlur>
-    </filter>
-  </svg>
+  <img id='loading' width="50"
+    src="{{ url_for('static', filename='loading.gif') }}">
+    <svg class='tree' width="100%">
+        <filter id="blur-effect-1">
+            <feGaussianBlur stdDeviation="3" />
+        </filter>
+    </svg>
 </div>
 {% endblock %}
 
 {% block tail %}
-{{ super() }}
-<script src="{{ url_for('static', filename='d3.v3.min.js') }}"></script>
-<script>
+  {{ super() }}
+  <script src="{{ url_for('static', filename='d3.v3.min.js') }}"></script>
+  <script>
 $('span.status_square').tooltip({html: true});
 
-var data = {{ data|tojson|safe }};
+var data = {{ data|safe }};
 var barHeight = 20;
 var axisHeight = 40;
 var square_x = 500;
@@ -197,15 +198,13 @@ function update(source) {
       .attr("title", function(d){
         var tt = "";
         if (d.operator != undefined) {
-          if (d.operator != undefined) {
-            tt += "操作: " + escapeHtml(d.operator) + "<br/>";
-          }
-          tt += "依赖过去: " + escapeHtml(d.depends_on_past) + "<br/>";
-          tt += "上游: " + escapeHtml(d.num_dep) + "<br/>";
-          tt += "重试: " + escapeHtml(d.retries) + "<br/>";
-          tt += "所有者: " + escapeHtml(d.owner) + "<br/>";
-          tt += "开始日期: " + escapeHtml(d.start_date) + "<br/>";
-          tt += "结束日期: " + escapeHtml(d.end_date) + "<br/>";
+            tt += "操作: " + d.operator + "<br/>";
+            tt += "依赖过去: " + d.depends_on_past + "<br/>";
+            tt += "上游: " + d.num_dep + "<br/>";
+            tt += "重试: " + d.retries + "<br/>";
+            tt += "所有者: " + d.owner + "<br/>";
+            tt += "开始日期: " + d.start_date + "<br/>";
+            tt += "结束日期: " + d.end_date + "<br/>";
         }
         return tt;
       })
@@ -234,9 +233,9 @@ function update(source) {
         if(d.task_id === undefined)
             call_modal_dag(d);
         else if(nodeobj[d.task_id].operator=='SubDagOperator')
-            call_modal(d.task_id, d.execution_date, d.try_number, true);
+            call_modal(d.task_id, d.execution_date, true);
         else
-            call_modal(d.task_id, d.execution_date, d.try_number);
+            call_modal(d.task_id, d.execution_date);
       })
       .attr("class", function(d) {return "state " + d.state})
       .attr("data-toggle", "tooltip")
@@ -246,26 +245,19 @@ function update(source) {
       .style("stroke-width", function(d) {return (d.run_id != undefined)? "2": "1"})
       .style("stroke-opacity", function(d) {return d.external_trigger ? "0": "1"})
       .attr("title", function(d){
-        var s = "";
-        if (d.task_id != undefined ) {
-          s += "任务id: " + escapeHtml(d.task_id) + "<br>";
-        }
-        s += "运行: " + escapeHtml(d.execution_date) + "<br>";
-        if(d.run_id != undefined){
-          s += "运行id: <nobr>" + escapeHtml(d.run_id) + "</nobr><br>";
-        }
-        if (d.operator != undefined) {
-          s += "操作: " + escapeHtml(d.operator) + "<br>"
-        }
-        if(d.start_date != undefined){
-          s += "开始: " + escapeHtml(d.start_date) + "<br>";
-          s += "结束: " + escapeHtml(d.end_date) + "<br>";
-          if (d.duration != undefined) {
-            s += "持续时间: " + escapeHtml(d.duration) + "<br>";
+          s =  "任务id: " + d.task_id + "<br>";
+          s += "运行: " + d.execution_date + "<br>";
+          if(d.run_id != undefined){
+              s += "运行id: <nobr>" + d.run_id + "</nobr><br>";
           }
-          s += "状态: " + escapeHtml(d.state) + "<br>";
-        }
-        return s;
+          s += "操作: " + d.operator + "<br>"
+          if(d.start_date != undefined){
+              s += "启动: " + d.start_date + "<br>";
+              s += "结束: " + d.end_date + "<br>";
+              s += "持续: " + d.duration + "<br>";
+              s += "状态: " + d.state + "<br>";
+          }
+          return s;
       })
       .attr('x', function(d, i) {return (i*(square_size+square_spacing));})
       .attr('y', -square_size/2)
@@ -385,6 +377,5 @@ function click(d) {
   }
 }
 set_tooltip();
-
-</script>
+  </script>
 {% endblock %}
